@@ -84,10 +84,32 @@ class UrlWriterTests < Test::Unit::TestCase
     
     # We need to create a new class in order to install the new named route.
     kls = Class.new { include ActionController::UrlWriter }
-    assert kls.new.respond_to?(:home_url)
+    controller = kls.new
+    assert controller.respond_to?(:home_url)
     assert_equal 'http://www.basecamphq.com/home/sweet/home/again',
-      kls.new.send(:home_url, :host => 'www.basecamphq.com', :user => 'again')
+      controller.send(:home_url, :host => 'www.basecamphq.com', :user => 'again')
+      
+    assert_equal("/home/sweet/home/alabama", controller.send(:home_path, :user => 'alabama', :host => 'unused'))
   ensure
     ActionController::Routing::Routes.load!
   end
+  
+  def test_only_path
+    ActionController::Routing::Routes.draw do |map|
+      map.home '/home/sweet/home/:user'
+      map.connect ':controller/:action/:id'
+    end
+    
+    # We need to create a new class in order to install the new named route.
+    kls = Class.new { include ActionController::UrlWriter }
+    controller = kls.new
+    assert controller.respond_to?(:home_url)
+    assert_equal '/brave/new/world',
+      controller.send(:url_for, :controller => 'brave', :action => 'new', :id => 'world', :only_path => true)
+    
+    assert_equal("/home/sweet/home/alabama", controller.send(:home_url, :user => 'alabama', :host => 'unused', :only_path => true))
+  ensure
+    ActionController::Routing::Routes.load!
+  end
+  
 end
